Fix some text sizing issues for readability

--- a/src/style/sheets/actor/character.scss
+++ b/src/style/sheets/actor/character.scss
@@ -47,7 +47,7 @@
             border-radius: 6px;
             background-color: var(--cosmere-color-base-3);
             font-family: var(--cosmere-font-normal);
-            font-size: var(--font-size-11);
+            font-size: var(--font-size-13);
             font-weight: 600;
             font-variant: lining-nums;
             color: var(--cosmere-color-text-sub);
